--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -63,6 +63,48 @@
     margin-top: 99px;
 }
 
+@media only screen and (max-width: 980px) {
+
+    .stats_body{
+        margin-top: 0px;
+        padding: 80px 24px;
+    }
+    .stats_top p{
+        font-size: 16px;
+    }
+
+    .divider{
+        /* width: 8px;
+        height: 100%;
+        top:0;
+        z-index: 99; */
+    }
+
+    .stats_bottom{
+        flex-direction: column;
+    }
+
+    .stats_top p {
+        letter-spacing: 0.11px;
+        line-height: 28px;
+        text-align: center;
+    }
+
+    .icon{
+        left: 0px;
+    }
+
+    .card{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .middle, .bottom{
+        margin-top: 0px;
+    }
+}
 
 /*  --- SINGLE STAT CARD STYLING --- */
 
@@ -77,3 +119,10 @@
     font-size: 15px;
     line-height: 26px;
 }
+
+@media only screen and (max-width: 480px){
+    .stat_card{
+      
+    }
+}
+
