--- a/src/components/Boost/Boost.css
+++ b/src/components/Boost/Boost.css
@@ -9,3 +9,12 @@
     align-items: center;
     gap: 32px;
 }
+
+@media only screen and (max-width: 980px) {
+    .boost_body{
+        padding: 90px 35px;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
