--- a/src/index.css
+++ b/src/index.css
@@ -414,6 +414,10 @@ h5{
   color: #FFF;
 }
 
+::placeholder{
+  font-size: 16px;
+  color: #34313D;
+}
 .error{
   color:red;
 }
@@ -429,4 +433,17 @@ h5{
   .footer_link:hover{
     transition: 1s;
   }
+}
+
+@media only screen and (max-width: 980px){
+
+  h1{
+    font-size: 2em;
+  }
+  h2,h3 {
+    font-size: 28px;
+  }
+
+
+  
 }
